[gd_scene load_steps=11 format=2]

[ext_resource path="res://Image/UI/blue_button01.png" type="Texture" id=1]
[ext_resource path="res://Image/UI/blue_button00.png" type="Texture" id=2]
[ext_resource path="res://Font/ZCOOLQingKeHuangYou-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scene/Pause.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0.184314, 0.176471, 0.176471, 0.831373 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 190, 49 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 190, 45 )
margin_left = 10.0
margin_right = 10.0
margin_top = 40.0
margin_bottom = 35.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 9.0

[sub_resource type="Animation" id=5]
resource_name = "Pause_on"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1024, 160 ), Vector2( 768, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 0.282353, 0.278431, 0.278431, 0 ), Color( 0.282353, 0.278431, 0.278431, 0.92549 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.282353, 0.278431, 0.278431, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1121.6 ]
}

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.282353, 0.278431, 0.278431, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.1
margin_left = 1024.0
margin_top = 160.0
margin_right = 1121.6
margin_bottom = 428.0
custom_constants/separation = 100
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "继续"

[node name="Quit2" type="Button" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 200.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "退出"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Pause_on = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="visibility_changed" from="." to="." method="_on_Pause_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit2" to="." method="_on_Quit2_pressed"]
